# arknights_bot

./: Cargo.toml
src/: bot_core.rs  callback_handle.rs  callback_handler.rs  callback_manager.rs  config_builder.rs  main.rs  timer.rs  utils.rs
src/callback_handle/: callback_manager.rs  callback_structs.rs
src/callback_manager/: timer_struct.rs
src/timer/: timed_function.rs  timed_manager.rs  timer_starter.rs  timer_struct.rs
src/utils/: timer_struct.rs  uuid_object_storage.rs
