[package]
name = "PtilopsisReborn"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide="0.13.0"
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["v4","fast-rng","macro-diagnostics"] }
log = "0.4.22"
tokio-util = "0.7.12"
futures = "0.3.31"
